minor alignment issue fixed

--- a/serverside/webapp/WEB-INF/base/eminstitute/app/collective/goals/goals.css
+++ b/serverside/webapp/WEB-INF/base/eminstitute/app/collective/goals/goals.css
@@ -465,9 +465,8 @@ ul.projectgoals {
 
 .taskdetails {
 	float: left;
-	padding: 5px;
+	padding: 0 5px 5px;
 	display: block;
-
 	overflow: hidden;
 	text-overflow: ellipsis;
 	display: -webkit-box;
